# blackice-ii-serialware

./: .gitignore  CMakeLists.txt  README.md  blackice_flash.ld  main.c  serialware.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
client/: client.go  go.mod  go.sum
client/cmd/: swtool.go
include/: serialware.h  stm32l4xx_hal_conf.h
tool/: go.mod  swtool.go
